--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,257 @@
-* {
-  box-sizing: border-box;
-}
 html {
   font-size: 62.5%;
+}
+:root {
+  --font-heading: "Sen", sans-serif;
 }
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+.main-content {
+  width: 1170px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: calc(100% - 48px);
+}
+
+/* header */
+.header {
+  background: #fffcf4;
+}
+.header.fixed {
+  position: sticky;
+  /* do ta truyền padding top là 36px
+  vậy nếu muốn khi ngang 8px dừng lại thì ta đưa vào top -28px; */
+  top: -28px;
+  z-index: 1;
+}
+
+.header .body-header {
+  display: flex;
+  align-items: center;
+  padding: 36px 0 8px;
+}
+.nav ul {
+  display: flex;
+}
+.nav {
+  margin-left: auto;
+}
+.nav a {
+  position: relative;
+  color: #5f5b53;
+  text-align: center;
+  font-family: Poppins;
+  padding: 8px 21px;
+}
+.btn {
+  display: block;
+  color: #fff;
+  text-align: center;
+  width: 118px;
+  border-radius: 24.5px;
+  background: #171100;
+  padding: 0 16px;
+  line-height: 50px;
+  font-weight: 600px;
+}
+.btn:hover {
+  opacity: 0.6;
+}
+.action .btn-sign-up {
+  width: 144px;
+  /* ở trên đã truyền pad là 21 để khoảng cách giữa các từ là 42
+  vậy ta cần cách thêm 49px nữa để thành 70px */
+  margin-left: 49px;
+}
+.nav li.active a,
+.body-header .nav a:hover {
+  color: #171100;
+  text-align: center;
+  text-shadow: 1px 0 0 currentColor;
+}
+.nav li.active a::after {
+  content: "";
+  position: absolute;
+  /* ở thẻ nav a thì ta đã truyền padding la 8px 21px
+  tức là trên dưới 8px trái phải 21px
+  vậy để gạch chân vào ngay chữ H thì cho cách trái 21px */
+  left: 21px;
+  bottom: 6px;
+  display: block;
+  width: 12px;
+  height: 2px;
+  border-radius: 1px;
+  background: #171100;
+}
+/* main  */
+/* .media-block .mini-table-content .mini-media {
+  display: flex;
+} */
+.body-hero .media-block {
+  /* media-content rộng 570px, hero rộng 1170 thì tức chiếm 48% */
+  width: 48%;
+  min-width: 570px;
+  position: relative;
+}
+
+.body-hero {
+  display: flex;
+}
+.hero {
+  /* header pad dưới là 8 px mà khoảng cách giữa header vs hero là 64 vậy 
+    khoảng cách cuối cần thêm là 56 */
+  padding: 56px 0 65px;
+  background-color: #fffcf4;
+}
+/* khối bên trái  */
+.hero .media-block .big-image {
+  width: 470px;
+  height: 685px;
+  border-radius: 20px;
+}
+/* Bảng nhỏ trong ảnh  */
+.media-block .mini-table-content {
+  position: absolute;
+  bottom: 48px;
+  left: 300px;
+  right: 0;
+  width: 270px;
+  border-radius: 12px;
+  background: #fff;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.mini-table-content .mini-media {
+  display: flex;
+  align-items: center;
+  /* margin: 28px 24px; */
+}
+.mini-media .icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mini-media .icon1 {
+  background-color: #fff9e8;
+}
+.mini-media .icon2 {
+  background-color: #fcefff;
+}
+.mini-media .icon3 {
+  background-color: #ebeaff;
+}
+.mini-table-content .info {
+  margin-left: 16px;
+}
+.mini-table-content .label {
+  color: #5f5b53;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+}
+.mini-table-content .title {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.7; /* 166.667% */
+}
+.mini-table-content .mini-media + .mini-media {
+  margin-top: 22px;
+}
+.mini-table-content .mini-table {
+  padding: 24px;
+}
+/* khối bên phải  */
+.body-hero .content-block {
+  width: 52%;
+  padding-left: 130px;
+  padding-top: 64px;
+}
+.hero .h1-content {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 5.8rem;
+  font-weight: 700;
+  line-height: 1.17; /* 117.241% */
+  letter-spacing: -1.16px;
+  width: 470px;
+}
+.hero .p-content {
+  margin-top: 22px;
+  width: 470px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.67; /* 166.667% */
+}
+.btn-icon {
+  /* align-items: center căn giữa theo chiều dọc các item bên trong; */
+  align-items: center;
+  display: flex;
+  padding-top: 38px;
+}
+.btn-icon .btn-buttom-conten_block {
+  border-radius: 32px;
+  background: #ffb900;
+  line-height: 64px;
+  width: 180px;
+}
+.hero .What-video {
+  border: none;
+  background: transparent;
+  display: flex;
+  margin-left: 28px;
+  /* cursor:  dùng để nhận biết vị trí nào nhấp vào được(có hình bàng tay); */
+  cursor: pointer;
+}
+.What-video .icon {
+  display: flex;
+  /* phải có display flex mới sử dụng được align item  */
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+}
+.btn-icon span {
+  margin-left: 14px;
+  color: #171100;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px; /* 166.667% */
+  width: 148px;
+}
+.btn-icon span:hover {
+  opacity: 0.5;
+}.hero .recent{
+  margin-top: 48px;
+font-size: 1.8rem;
+font-weight: 400;
+line-height: 1.67; /* 166.667% */
+}
+.hero .end-text strong{
+  color: #171100;
+font-family: var(--font-heading);
+font-size: 44px;
+font-style: normal;
+font-weight: 700;
+line-height: 54px; /* 122.727% */
+margin-right: 15px;
+}
+.hero .end-text strong:nth-child(2){
+  margin-left: 28px;
+}
+.hero .end-text{
+  margin-top: 8px;
 }
