--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,6 +373,7 @@ khiến cho web không thể nhận diện để xuống hàng */
 }
 .popular-bottom .info .p-content {
   margin-top: 6px;
+  width: 326px;
   color: #5f5b53;
   font-size: 1.4rem;
   line-height: 1.86; /* 185.714% */
@@ -398,6 +399,9 @@ khiến cho web không thể nhận diện để xuống hàng */
 .popular-bottom .foot .btn-foot:hover {
   opacity: 0.9;
   background: #ffb900;
+}
+.popular-bottom .course-item:hover {
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
 }
 /* feedback  */
 .feedback {
@@ -441,6 +445,8 @@ khiến cho web không thể nhận diện để xuống hàng */
   margin-top: 28px;
   gap: 6px;
 }
+.blog .dots .dot,
+/* .blog .blog-bottom .dot, */
 .feedback-item .dot {
   width: 6px;
   height: 6px;
@@ -461,6 +467,7 @@ khiến cho web không thể nhận diện để xuống hàng */
   font-weight: 400;
   line-height: 1.53; /* 153.846% */
 }
+.blog .dots .dot.active,
 .feedback-item .dot.active {
   border-radius: 6px;
   background: #ffb900;
@@ -534,4 +541,198 @@ khiến cho web không thể nhận diện để xuống hàng */
 .f2nd .content-features.c2nd {
   margin-right: 130px;
   width: 49%;
+}
+.blog {
+  padding: 96px 0;
+  margin-top: 135px;
+  background-color: #fffcf4;
+}
+.blog .blog-top {
+  text-align: center;
+}
+.blog .blog-top .h2-content {
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.26; /* 126.316% */
+  letter-spacing: -0.76px;
+}
+.blog .blog-top .p-content {
+  display: inline-block;
+  margin-top: 16px;
+  width: 448px;
+  color: #696262;
+  text-align: center;
+  font-size: 1.6rem;
+}
+/* blog bottom  */
+.blog .blog-bottom {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 55px;
+  gap: 30px;
+}
+.blog .blog-bottom img {
+  width: 370px;
+  height: 250px;
+  border-radius: 16px 16px 0px 0px;
+  object-fit: cover;
+}
+/* .blog .blog-bottom .dot {
+  background-color: #fea31b;
+} */
+/* có thể thêm vào ban đầu một thẻ div để chỉnh nút nhỏ
+hoặc dùng before để chỉnh nút nhỏ với nút nhỏ lúc này là con của date */
+.blog .blog-bottom .date::before {
+  content: "";
+  margin-right: 4px;
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fea31b;
+}
+
+.blog .blog-bottom .dot {
+  margin-right: 4px;
+}
+.blog .blog-bottom .date {
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+  color: #5f5b53;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+}
+.blog .blog-bottom .text-blog {
+  color: #171100;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+  margin-top: 25px;
+  width: 330px;
+}
+.blog .blog-bottom .btn-foot {
+  width: 118px;
+  margin-top: 12px;
+}
+.blog .blog-bottom .btn-foot:hover {
+  background-color: #ffb900;
+  opacity: 0.9;
+}
+.blog .blog-bottom .idea-margin {
+  margin: 20px 20px 28px 20px;
+}
+.blog .blog-bottom .blog-item {
+  border-radius: 16px;
+  background: #fff;
+  width: calc(33.33% - 20px);
+  /* có 3 item lấy 100 chia 3 gần bằng 33.33% nhưng trường hợp item nào bị khuyết khi thêm gap vào ở giữa
+  thì ta sử dụng width: calc(33.33% -20px) để luôn cố định dư ra mỗi bên 10px; */
+}
+.blog .blog-bottom .blog-item:hover {
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.blog .blog-bottom .date::after {
+  /* vì date đang sử dụng display flex nên thanh ngang sẽ nằm cùng một hàng với date ta sử dụng absolute vs relative; */
+  position: absolute;
+  left: 0;
+  bottom: -12px;
+
+  /* muốn thanh ngang tự động chỉnh độ dài khi thanh đổi nội dung
+ta xét: thấy chữ trong phần date là 123px thanh ngang là 160px
+hơn kém nhau 37px vậy ta thêm vào thuộc tính right: -37px thay cho width: ;*/
+
+  content: "";
+  display: inline-block;
+  /* để có thể xét độ rộng */
+  /* width: 160px; */
+  right: -37px;
+  /* nhưng khi thêm vào ta thấy thanh ngang vượt quá so vượt độ chênh 37
+  là do ta sử dụng display: flex vào date nên mặc định nó sẽ chiếm hết hàng ngang
+  ta dùng inline-flex để giải quyết; */
+  height: 1px;
+  border-radius: 0.5px;
+  background: #e2dfda;
+}
+.blog .dots {
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+  margin-top: 38px;
+}
+/* footer  */
+.footer {
+  padding: 96px 135px 28px;
+  background: #2e2100;
+}
+.footer .footer-row {
+  border-bottom: 1px solid #59554b;
+  padding-bottom: 38px;
+  display: flex;
+  /* align-items: center; */
+}
+.footer .footer-row .column {
+  /* 100%-35% rồi chia 3 */
+  width: 21.6%;
+}
+.footer .footer-row .column:first-child {
+  /* (267+145)/1170*100 */
+  width: 35%;
+}
+.footer .footer-row .column .p-content {
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  font-weight: 400;
+  /* max-width: toàn bộ các phần tử sẽ co lại khi thu hẹp mh; */
+  max-width: 267px;
+  margin-top: 18px;
+  line-height: 1.86; /* 185.714% */
+}
+.footer-row .column .icon-group {
+  display: flex;
+  gap: 18px;
+  margin-top: 18px;
+}
+
+.footer-row .column .tile {
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+  display: inline-block;
+  padding-bottom: 14px;
+}
+.footer .footer-row li:first-child a {
+  margin-top: 28px;
+}
+.footer-row .column a {
+  /* thẻ a là inline không chỉnh margin được  */
+  display: inline-block;
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+  margin-bottom: 12px;
+}
+.footer-row .column li:last-child a {
+  margin-bottom: 0;
+  /* bỏ đi margin của phần tử cuối   */
+}
+.footer-row .column strong {
+  color: #fff;
+  font-size: 1.4rem;
+}
+.footer .p-content.end {
+  color: #807d74;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.86; /* 185.714% */
+  margin-top: 28px;
+}
+.footer .tile {
+  /* dùng để vẽ đoạn thẳng không có bo góc  */
+  /* nếu đoạn thẳng bị kéo quá đài hãy xem lại thuộc tính display của thẻ trên nó  */
+  border-bottom: 1px solid #59554b;
 }
